fixed z-index on city list

--- a/src/components/CityList/CityList.scss
+++ b/src/components/CityList/CityList.scss
@@ -8,7 +8,7 @@
   margin: 0 auto;
   position: absolute;
   left: calc(50% - 180px);
-  z-index: 1;
+  z-index: 2;
   ul {
     background-color: #f8f8f8;
     border-radius: 4px;
